--- a/apps/challenger/app/globals.css
+++ b/apps/challenger/app/globals.css
@@ -24,8 +24,6 @@ html {
 }
 
 .challenge-description {
-  @apply font-bold;
-
   p {
     @apply text-sm text-pretty font-normal;
   }
@@ -33,7 +31,7 @@ html {
   h2,
   h3,
   h4 {
-    @apply my-2;
+    @apply my-2 font-bold border-2 border-x-0 border-t-0 border-b-border;
   }
 
   h3 {
@@ -42,6 +40,14 @@ html {
 
   h2 {
     @apply text-xl;
+  }
+
+  ul {
+    @apply list-disc ml-5;
+  }
+
+  blockquote {
+    @apply border border-border rounded-sm p-2 my-2 bg-gray-700/70;
   }
 }
 
